build_final_log_utf8.txt
Processing cyd (platform: espressif32; board: esp32dev; framework: arduino)
--------------------------------------------------------------------------------
Verbose mode can be enabled via `-v, --verbose` option
CONFIGURATION: https://docs.platformio.org/page/boards/espressif32/esp32dev.html
PLATFORM: Espressif 32 (55.3.36) > Espressif ESP32 Dev Module
HARDWARE: ESP32 240MHz, 320KB RAM, 4MB Flash
DEBUG: Current (cmsis-dap) External (cmsis-dap, esp-bridge, esp-prog, iot-bus-jtag, jlink, minimodule, olimex-arm-usb-ocd, olimex-arm-usb-ocd-h, olimex-arm-usb-tiny-h, olimex-jtag-tiny, tumpa)
PACKAGES: 
 - contrib-piohome @ 3.4.4 
 - framework-arduinoespressif32 @ 3.3.6 
 - framework-arduinoespressif32-libs @ 5.5.0+sha.f56bea3d1f 
 - tool-esptoolpy @ 5.1.0 
 - tool-openocd-esp32 @ 2.1200.20251215 (12.0) 
 - tool-xtensa-esp-elf-gdb @ 16.3.0+20250913 
 - toolchain-xtensa-esp-elf @ 14.2.0+20251107
*** Applied include path shortening for 296 framework paths ***
*** Path length reduced from 33947 to ~11838 characters ***
*** Estimated savings: 21608 characters ***
LDF: Library Dependency Finder -> https://bit.ly/configure-pio-ldf
LDF Modes: Finder ~ chain, Compatibility ~ soft
Found 60 compatible libraries
Scanning dependencies...
Dependency Graph
|-- Adafruit ILI9341 @ 1.6.3
|-- Adafruit GFX Library @ 1.12.6
|-- Adafruit BusIO @ 1.17.4
|-- XPT2046_Touchscreen @ 1.4.0+sha.f956c5d
|-- OneWire @ 2.3.8
|-- DallasTemperature @ 3.11.0
|-- Adafruit INA219 @ 1.2.3
|-- SdFat @ 2.3.1
|-- SPI @ 3.3.6
|-- Preferences @ 3.3.6
|-- Wire @ 3.3.6
Building in release mode
Compiling .pio\build\cyd\libd10\Wire\Wire.cpp.o
Compiling .pio\build\cyd\lib012\SPI\SPI.cpp.o
Compiling .pio\build\cyd\lib479\Adafruit BusIO\Adafruit_BusIO_Register.cpp.o
Compiling .pio\build\cyd\lib479\Adafruit BusIO\Adafruit_GenericDevice.cpp.o
Compiling .pio\build\cyd\lib479\Adafruit BusIO\Adafruit_I2CDevice.cpp.o
Compiling .pio\build\cyd\lib479\Adafruit BusIO\Adafruit_SPIDevice.cpp.o
Compiling .pio\build\cyd\libc65\Adafruit GFX Library\Adafruit_GFX.cpp.o
Compiling .pio\build\cyd\libc65\Adafruit GFX Library\Adafruit_GrayOLED.cpp.o
Compiling .pio\build\cyd\libc65\Adafruit GFX Library\Adafruit_SPITFT.cpp.o
Compiling .pio\build\cyd\libc65\Adafruit GFX Library\glcdfont.c.o
Compiling .pio\build\cyd\lib0c7\Adafruit ILI9341\Adafruit_ILI9341.cpp.o
Compiling .pio\build\cyd\lib56d\XPT2046_Touchscreen\XPT2046_Touchscreen.cpp.o
Compiling .pio\build\cyd\lib170\OneWire\OneWire.cpp.o
Compiling .pio\build\cyd\lib953\DallasTemperature\DallasTemperature.cpp.o
Compiling .pio\build\cyd\libb10\Adafruit INA219\Adafruit_INA219.cpp.o
pio : cc1.exe: warning: command-line option '-Wno-deprecated-enum-enum-conversion' is valid for C++/ObjC++ but not for 
C
No linha:1 caractere:26
+ pio run -t clean -e cyd; pio run -e cyd > build_final_log.txt 2>&1
+                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (cc1.exe: warnin...+ but not for C:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
cc1.exe: warning: command-line option '-fno-rtti' is valid for C++/D/ObjC++ but not for C
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatDbg.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatFile.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatFilePrint.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatFileWrite.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatFormatter.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatName.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatPartition.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\ExFatLib\ExFatVolume.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatDbg.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatFile.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatFileLFN.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatFilePrint.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatFileSFN.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatFormatter.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatName.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatPartition.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FatLib\FatVolume.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FreeStack.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FsLib\FsFile.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FsLib\FsNew.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\FsLib\FsVolume.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\MinimumSerial.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\PioSdio\PioSdioCard.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdCardInfo.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdSpiCard\SdSpiCard.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdSpiCard\SpiDriver\SdSpiChipSelect.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdSpiCard\SpiDriver\SdSpiDue.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdSpiCard\SpiDriver\SdSpiSTM32Core.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\SdSpiCard\SpiDriver\SdSpiTeensy3.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\SdCard\TeensySdio\TeensySdio.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FmtNumber.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FsCache.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FsDateTime.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FsName.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FsStructs.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\FsUtf.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\PrintBasic.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\common\upcase.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\iostream\StdioStream.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\iostream\StreamBaseClass.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\iostream\istream.cpp.o
Compiling .pio\build\cyd\lib8db\SdFat\iostream\ostream.cpp.o
Compiling .pio\build\cyd\lib896\Preferences\Preferences.cpp.o
Compiling .pio\build\cyd\src\buttons.cpp.o
Compiling .pio\build\cyd\src\buzzer.cpp.o
Compiling .pio\build\cyd\src\calibration.cpp.o
Compiling .pio\build\cyd\src\database.cpp.o
Compiling .pio\build\cyd\src\display_globals.cpp.o
Compiling .pio\build\cyd\src\globals.cpp.o
Compiling .pio\build\cyd\src\graphics.cpp.o
Compiling .pio\build\cyd\src\leds.cpp.o
Compiling .pio\build\cyd\src\logger.cpp.o
Compiling .pio\build\cyd\src\main.cpp.o
Compiling .pio\build\cyd\src\measurements.cpp.o
Compiling .pio\build\cyd\src\menu.cpp.o
Compiling .pio\build\cyd\src\multimeter.cpp.o
Compiling .pio\build\cyd\src\safety.cpp.o
Compiling .pio\build\cyd\src\splash.cpp.o
Compiling .pio\build\cyd\src\task_manager.cpp.o
Compiling .pio\build\cyd\src\thermal.cpp.o
Compiling .pio\build\cyd\src\ui.cpp.o
src/measurements.cpp: In function 'void measurements_update()':
src/measurements.cpp:37:9: error: 'componentDB' was not declared in this scope; did you mean 'ComponentType'?
   37 |     if (componentDB.loaded && componentDB.count > 0) {
      |         ^~~~~~~~~~~
      |         ComponentType
src/measurements.cpp:38:31: error: 'COMP_GENERIC' was not declared in this scope; did you mean 'COMP_ZENER'?
   38 |         lastStatus = db_judge(COMP_GENERIC, lastValue);
      |                               ^~~~~~~~~~~~
      |                               COMP_ZENER
*** [.pio\build\cyd\src\measurements.cpp.o] Error 1
src/multimeter.cpp: In function 'float multimeter_read_dc_current()':
src/multimeter.cpp:154:1: error: control reaches end of non-void function [-Werror=return-type]
  154 | }
      | ^
cc1plus.exe: some warnings being treated as errors
*** [.pio\build\cyd\src\multimeter.cpp.o] Error 1
========================= [FAILED] Took 30.82 seconds =========================
